<resources>
    <string name="app_name">ApplyExchangeRate</string>

    <string name="calculate_exchange_rate">환율 계산</string>
    <string name="remittance_country">송금국가 :</string>
    <string name="united_states"></string>
    <string name="recipient_country">수취국가:</string>
    <string name="exchange_rate">환율:</string>
    <string name="remittance_amount">송금액</string>
    <string name="usd">USD</string>
    <string name="submit">Submit</string>
    <string name="nation_usd">USD</string>

    <string-array name="exchange_rate_by_countries">
        <item>한국(KRW)</item>
        <item>일본(JPY)</item>
        <item>필리핀(PHP)</item>
    </string-array>

    <string name="exchange_rate_usd">미국(USD)</string>
    <string name="msg_uncorrect_match">송금액이 바르지 않습니다</string>
    <string name="msg_exchange_rate_calculation_result">수취금액은 %,.2f %s 입니다.</string>
    <string name="exchange_rate_result">%,.2f %s/USD</string>
    <string name="msg_network_error">네트워크 에러입니다.</string>
</resources>