<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            type="com.impactyoung.applyexchangerate.scene.main.BaseViewModel"
            name="viewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp"
        tools:context=".scene.main.MainActivity">

        <TextView
            android:id="@+id/textExchangeRateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_exchange_rate"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelRemittanceCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/remittance_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textExchangeRateTitle" />

        <TextView
            android:id="@+id/textRemittanceCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/exchange_rate_usd"
            app:layout_constraintStart_toEndOf="@+id/labelRemittanceCountry"
            app:layout_constraintTop_toTopOf="@+id/labelRemittanceCountry" />

        <TextView
            android:id="@+id/labelRecipientCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recipient_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelRemittanceCountry" />

        <Spinner
            android:id="@+id/spinnerRecipientCountry"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:spinnerMode="dropdown"
            android:theme="@style/SpinnerTheme"
            app:layout_constraintStart_toEndOf="@+id/labelRecipientCountry"
            app:layout_constraintTop_toTopOf="@id/labelRecipientCountry" />

        <TextView
            android:id="@+id/labelExchangeRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exchange_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerRecipientCountry" />

        <TextView
            android:id="@+id/textExchangeRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@+id/labelExchangeRate"
            app:layout_constraintTop_toTopOf="@+id/labelExchangeRate"
            tools:text="1,119.93 KRW/USD" />

        <TextView
            android:id="@+id/labelRemittanceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/remittance_amount"
            app:layout_constraintBottom_toBottomOf="@id/editRemittanceAmountContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelExchangeRate" />

        <EditText
            android:id="@+id/editRemittanceAmountContent"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/labelRemittanceAmount"
            app:layout_constraintTop_toBottomOf="@+id/textExchangeRate"
            tools:text="100" />

        <TextView
            android:id="@+id/labelRemittanceAmountUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/nation_usd"
            app:layout_constraintStart_toEndOf="@+id/editRemittanceAmountContent"
            app:layout_constraintTop_toTopOf="@+id/labelRemittanceAmount" />

        <TextView
            android:id="@+id/btuSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_graditient_grey"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRemittanceAmountContent" />

        <TextView
            android:id="@+id/textReceivableAmountResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btuSubmit"
            tools:text="수취금액은 111,993.00 KRW 입니다." />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>